--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1370,32 +1370,66 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2573 entries, 0 to 2575\n",
-      "Data columns (total 17 columns):\n",
-      "match_id      2573 non-null object\n",
-      "Player 1      2573 non-null object\n",
-      "Player 2      2573 non-null object\n",
-      "Pl 1 hand     2573 non-null object\n",
-      "Pl 2 hand     2573 non-null object\n",
-      "Gender        2573 non-null object\n",
-      "Date          2573 non-null object\n",
-      "Tournament    2573 non-null object\n",
-      "Round         2573 non-null object\n",
-      "Time          1495 non-null object\n",
-      "Court         1929 non-null object\n",
-      "Surface       2573 non-null object\n",
-      "Umpire        1594 non-null object\n",
-      "Best of       2573 non-null int64\n",
-      "Final TB?     2566 non-null object\n",
-      "Charted by    2573 non-null object\n",
-      "Year          2573 non-null object\n",
-      "dtypes: int64(1), object(16)\n",
-      "memory usage: 361.8+ KB\n"
+      "RangeIndex: 439988 entries, 0 to 439987\n",
+      "Data columns (total 51 columns):\n",
+      "Unnamed: 0       439988 non-null int64\n",
+      "match_id         439988 non-null object\n",
+      "Pt               439988 non-null int64\n",
+      "Set1             439988 non-null int64\n",
+      "Set2             439988 non-null int64\n",
+      "Gm1              439987 non-null float64\n",
+      "Gm2              439987 non-null float64\n",
+      "Pts              439988 non-null object\n",
+      "Gm#              439987 non-null object\n",
+      "TbSet            439988 non-null object\n",
+      "TB?              439988 non-null object\n",
+      "TBpt             15632 non-null float64\n",
+      "Svr              439988 non-null int64\n",
+      "Ret              439988 non-null int64\n",
+      "Serving          439375 non-null object\n",
+      "1st              439988 non-null object\n",
+      "2nd              166825 non-null object\n",
+      "Notes            26591 non-null object\n",
+      "1stSV            439988 non-null int64\n",
+      "2ndSV            166825 non-null float64\n",
+      "1stIn            439988 non-null int64\n",
+      "2ndIn            166825 non-null float64\n",
+      "isRally1st       439988 non-null int64\n",
+      "isRally2nd       439988 non-null int64\n",
+      "Sv1              439988 non-null object\n",
+      "Sv2              166825 non-null object\n",
+      "Rally            381134 non-null object\n",
+      "isAce            439988 non-null bool\n",
+      "isUnret          439988 non-null bool\n",
+      "isRallyWinner    439988 non-null bool\n",
+      "isForced         439988 non-null bool\n",
+      "isUnforced       439988 non-null bool\n",
+      "isDouble         439988 non-null bool\n",
+      "rallyLen         439988 non-null float64\n",
+      "PtWinner         439988 non-null int64\n",
+      "isSvrWinner      439988 non-null int64\n",
+      "PtsAfter         439988 non-null object\n",
+      "GmW              439988 non-null int64\n",
+      "Gm1.1            439988 non-null int64\n",
+      "Gm2.1            439988 non-null int64\n",
+      "SetW             439988 non-null int64\n",
+      "Set1.1           439988 non-null int64\n",
+      "Set2.1           439988 non-null int64\n",
+      "rallyCount       439983 non-null float64\n",
+      "serve_side       439796 non-null object\n",
+      "Sv1_direction    439988 non-null object\n",
+      "Sv1_outcome      203908 non-null object\n",
+      "Sv2_direction    439988 non-null object\n",
+      "Sv2_outcome      16542 non-null object\n",
+      "server_name      439988 non-null object\n",
+      "returner_name    439988 non-null object\n",
+      "dtypes: bool(6), float64(7), int64(18), object(20)\n",
+      "memory usage: 153.6+ MB\n"
      ]
     }
    ],
    "source": [
-    "df_matches.info()"
+    "df_points.info()"
    ]
   },
   {
@@ -1536,9 +1570,26 @@
    "source": [
     "# Check if there is a difference in serve directions on different surfaces against the same player\n",
     "# Same tournament, different player, check serve difference\n",
+    "# Check if there is a difference in serve directions on crucial points\n",
     "- Need to control by year and/or by opponent\n",
     "# Check if there is a difference between two players' matches on the same surface\n",
     "# SaMe OpPoNeNt, SaMe ToUrNaMeNt, DiFfErEnt PlAyEr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_serve_one_player_same_opponent_same_surface(player, opponent):\n",
+    "    compare_matches_different_surfaces = pd.DataFrame()\n",
+    "    for surface in [\"hard\", \"clay\", \"grass\"]:\n",
+    "        my_matches = select_matches(player1=player, player2=opponent, surface=surface)\n",
+    "        for index, row in my_matches.iterrows():\n",
+    "            selected_points = df_points.loc[(df_points[\"match_id\"] == row[\"match_id\"]) & (df_points[\"server_name\"].str.contains(player))]\n",
+    "            selected_points_first_serve = selected_points[\"Sv1_direction\"].value_counts()\n",
+    "            "
    ]
   },
   {
@@ -1689,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2198,7 @@
        "2885     stanislas_wawrinka          roger_federer      8"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
