Try to resolve a conflict

--- a/Tennis_Analytics_new.ipynb
+++ b/Tennis_Analytics_new.ipynb
@@ -1153,9 +1153,10 @@
     "- Write a function to calculate the residue emotions after each game and each set (relief, excitement, frustration, anger)\n",
     "- Write a function to evaluate the aggressiveness of a rally for a player\n",
     "- Detect patterns in a player's rally. Can you classify players into \"style\" groups?\n",
+    "- Write a function to convert from traditional tennis score to point score\n",
     "- How to evaluate a rally? Find statistical parameters for a rally:\n",
     "    - Number of different shot types per point (how to measure variety?)\n",
-    "    - Distribution of different shot types \n",
+    "    - Distribution1a of different shot types \n",
     "    - Length of rally\n",
     "    - "
    ]
