Fix bugs in point data processing functions; update pont_gap_table.csv

--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -405,14 +405,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_point_data(df_points):\n",
     "    df_points = df_points.copy()\n",
     "    \n",
+    "    # Do we need to fill na with 0?\n",
     "    df_points = df_points.astype({\"rallyLen\": \"float64\"})\n",
+    "    df_points = df_points.astype({\"TB?\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Pt\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Set1\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Set2\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Gm1\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Gm2\": \"int32\"})\n",
+    "    # df_points = df_points.astype({\"TbSet\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Svr\": \"int32\"})\n",
+    "    df_points = df_points.astype({\"Ret\": \"int32\"})\n",
     "    \n",
     "    # Excel automatically changes \"1-2\" to \"1-Feb\", etc. So we have to change them back.\n",
     "    df_points[\"Pts\"] = df_points[\"Pts\"].str.replace(\"Jan\", \"1\", case=False)\n",
@@ -459,11 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Consistency check\n",
+    "# Only call this if you are processing match data downloaded from GitHub. \n",
+    "# If you are loading the processed match data, you don't need to call this.\n",
+    "\n",
     "# The original match data and point data are not consistent. \n",
     "# Some matches in the original point data are not in the original matches data. \n",
     "# Need to merge them\n",
@@ -775,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,12 +1030,12 @@
     "    # Other cases are too complicated to precalcualte, so we'll have to write code. \n",
     "    point_gap_table = pd.read_csv(point_gap_file)\n",
     "    \n",
-    "    point_data[[\"server_points_to_win\", \"server_pointss_to_loss\", \n",
-    "                \"returner_points_to_win\", \"retuner_points_to_loss\", \n",
-    "                \"server_returner_points_gap\", \"returner_server_points_gap\",\n",
-    "                \"server_points_to_win_norm\", \"server_pointss_to_loss_norm\", \n",
-    "                \"returner_points_to_win_norm\", \"retuner_points_to_loss_norm\", \n",
-    "                \"server_returner_points_gap_norm\", \"returner_server_points_gap_norm\"]] = None\n",
+    "#     point_data[[\"server_points_to_win\", \"server_points_to_loss\", \n",
+    "#                 \"returner_points_to_win\", \"returner_points_to_loss\", \n",
+    "#                 \"server_returner_points_gap\", \"returner_server_points_gap\",\n",
+    "#                 \"server_points_to_win_norm\", \"server_points_to_loss_norm\", \n",
+    "#                 \"returner_points_to_win_norm\", \"returner_points_to_loss_norm\", \n",
+    "#                 \"server_returner_points_gap_norm\", \"returner_server_points_gap_norm\"]] = None\n",
     "    \n",
     "    # Calculate point score gaps for non-tiebreak points using the pint_gap_table.\n",
     "    \n",
@@ -1063,11 +1075,14 @@
     "                point_data.at[index, \"server_points_to_loss\"] = tb_target_point - returner_point\n",
     "                point_data.at[index, \"returner_points_to_win\"] = tb_target_point - returner_point\n",
     "                point_data.at[index, \"returner_points_to_loss\"] = tb_target_point - server_point\n",
+    "\n",
+    "                point_data.at[index, \"server_returner_points_gap\"] = server_point - returner_point\n",
+    "                point_data.at[index, \"returner_server_points_gap\"] = returner_point - server_point\n",
     "                \n",
     "                # Calculate normalized gaps (between 0 and 1) so we can compare the gaps between \n",
     "                # tiebreak scores and non-tiebreak scores.\n",
     "                point_data.at[index, \"server_points_to_win_norm\"] = \\\n",
-    "                    point_data.at[index, \"server_points_to_win_norm\"] / tb_target_point\n",
+    "                    point_data.at[index, \"server_points_to_win\"] / tb_target_point\n",
     "            \n",
     "                point_data.at[index, \"server_points_to_loss_norm\"] = \\\n",
     "                     point_data.at[index, \"server_points_to_loss\"] / tb_target_point\n",
@@ -1078,6 +1093,7 @@
     "                point_data.at[index, \"returner_points_to_loss_norm\"] = \\\n",
     "                    point_data.at[index, \"returner_points_to_loss\"] / tb_target_point\n",
     "\n",
+    "                # The biggest possible point gap in tiebreak is 6 (or 9 in AO final set tiebreak)\n",
     "                point_data.at[index, \"server_returner_points_gap_norm\"] = \\\n",
     "                    point_data.at[index, \"server_returner_points_gap\"] / (tb_target_point - 1)\n",
     "\n",
@@ -1090,6 +1106,9 @@
     "                point_data.at[index, \"server_points_to_loss\"] = 2 - (returner_point - server_point)\n",
     "                point_data.at[index, \"returner_points_to_win\"] = 2 - (returner_point - server_point)\n",
     "                point_data.at[index, \"returner_points_to_loss\"] = 2 - (server_point - returner_point)\n",
+    "                \n",
+    "                point_data.at[index, \"server_returner_points_gap\"] = server_point - returner_point\n",
+    "                point_data.at[index, \"returner_server_points_gap\"] = returner_point - server_point                \n",
     "                            \n",
     "                # Calculate normalized gaps so we can compare the gaps between tiebreak scores and \n",
     "                # non-tiebreak scores.\n",
@@ -1097,7 +1116,7 @@
     "                # a row to win the tiebreak. Now the most point one can win is 3 points. \n",
     "                # The biggest possible gap is 1. \n",
     "                point_data.at[index, \"server_points_to_win_norm\"] = \\\n",
-    "                    point_data.at[index, \"server_points_to_win_norm\"] / 3\n",
+    "                    point_data.at[index, \"server_points_to_win\"] / 3\n",
     "            \n",
     "                point_data.at[index, \"server_points_to_loss_norm\"] = \\\n",
     "                     point_data.at[index, \"server_points_to_loss\"] / 3\n",
@@ -1117,10 +1136,10 @@
     "    # Calculate game score gap\n",
     "\n",
     "    point_data[[\"server_games_to_win\", \"server_games_to_loss\", \n",
-    "                \"returner_games_to_win\", \"retuner_games_to_loss\", \n",
+    "                \"returner_games_to_win\", \"returner_games_to_loss\", \n",
     "                \"server_returner_games_gap\", \"returner_server_games_gap\",\n",
     "                \"server_games_to_win_norm\", \"server_games_to_loss_norm\", \n",
-    "                \"returner_games_to_win_norm\", \"retuner_games_to_loss_norm\", \n",
+    "                \"returner_games_to_win_norm\", \"returner_games_to_loss_norm\", \n",
     "                \"server_returner_games_gap_norm\", \"returner_server_games_gap_norm\"]] = None\n",
     "    \n",
     "    for index, row in point_data.iterrows():        \n",
@@ -1143,7 +1162,7 @@
     "                \n",
     "                # Before 5-5, biggest possible games to win or loss is 6\n",
     "                point_data.at[index, \"server_games_to_win_norm\"] = \\\n",
-    "                    point_data.at[index, \"server_games_to_win_norm\"] / 6\n",
+    "                    point_data.at[index, \"server_games_to_win\"] / 6\n",
     "                \n",
     "                point_data.at[index, \"server_games_to_loss_norm\"] = \\\n",
     "                    point_data.at[index, \"server_games_to_loss\"] / 6\n",
@@ -1228,18 +1247,32 @@
     "            point_data.at[index, \"server_returner_games_gap\"] = 0\n",
     "            point_data.at[index, \"returner_server_games_gap\"] = 0\n",
     "            \n",
+    "            # In a tiebreak, the most game you can win or loss is always 1.\n",
+    "            point_data.at[index, \"server_games_to_win_norm\"] = \\\n",
+    "                point_data.at[index, \"server_games_to_win\"]\n",
+    "            \n",
+    "            point_data.at[index, \"server_games_to_loss_norm\"] = \\\n",
+    "                point_data.at[index, \"server_games_to_loss\"]\n",
+    "            \n",
+    "            point_data.at[index, \"returner_games_to_win_norm\"] = \\\n",
+    "                point_data.at[index, \"returner_games_to_win\"]\n",
+    "            \n",
+    "            point_data.at[index, \"returner_games_to_loss_norm\"] = \\\n",
+    "                point_data.at[index, \"returner_games_to_loss\"]\n",
+    "            \n",
     "            # For tiebreak points, the game_points_gap is 0.\n",
     "            point_data.at[index, \"server_returner_games_gap_norm\"] = \\\n",
     "                point_data.at[index, \"server_returner_games_gap\"]\n",
+    "            \n",
     "            point_data.at[index, \"returner_server_games_gap_norm\"] = \\\n",
     "                point_data.at[index, \"returner_server_games_gap\"]            \n",
     "    \n",
     "    # Calculate set point gap\n",
     "    point_data[[\"server_sets_to_win\", \"server_sets_to_loss\", \n",
-    "                \"returner_sets_to_win\", \"retuner_sets_to_loss\", \n",
+    "                \"returner_sets_to_win\", \"returner_sets_to_loss\", \n",
     "                \"server_returner_sets_gap\", \"returner_server_sets_gap\",\n",
     "                \"server_sets_to_win_norm\", \"server_sets_to_loss_norm\", \n",
-    "                \"returner_sets_to_win_norm\", \"retuner_sets_to_loss_norm\", \n",
+    "                \"returner_sets_to_win_norm\", \"returner_sets_to_loss_norm\", \n",
     "                \"server_returner_sets_gap_norm\", \"returner_server_sets_gap_norm\"]] = None   \n",
     "    \n",
     "    for index, row in point_data.iterrows():\n",
@@ -1273,7 +1306,7 @@
     "        point_data.at[index, \"server_sets_to_loss_norm\"] = \\\n",
     "            point_data.at[index, \"server_sets_to_loss\"] / target_sets\n",
     "        point_data.at[index, \"returner_sets_to_win_norm\"] = \\\n",
-    "            point_data.at[index, \"returner_sets_to_wini\"] / target_sets\n",
+    "            point_data.at[index, \"returner_sets_to_win\"] / target_sets\n",
     "        point_data.at[index, \"returner_sets_to_loss_norm\"] = \\\n",
     "            point_data.at[index, \"returner_sets_to_loss\"] / target_sets\n",
     "        \n",
@@ -1382,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1554,13 +1587,17 @@
       "There are 2350 match ids in the match data set.\n",
       "There are 2573 match ids in the point data set.\n",
       "The number of match ids do not match. Trying to fix the problem ...\n",
+      "The following match ids are in the match data set but not the point data set. Fix it.\n",
+      "\n",
       "Match data and point data are the same at 2573\n",
       "Problem solved\n"
      ]
     }
    ],
    "source": [
-    "df_matches = sync_match_and_point_data(df_points, df_matches)"
+    "df_matches = sync_match_and_point_data(df_points, df_matches)\n",
+    "\n",
+    "df_matches = clean_match_data(df_matches)"
    ]
   },
   {
@@ -1572,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1654,7 @@
        "550"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1687,7 @@
        "Length: 550, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,63 +2364,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select one match and get the points\n",
-    "# No need to do this every time. We only need to run this once and save it to a CSV file.\n",
-    "# After that, we just load the CSV file.\n",
-    "my_matches = select_matches(df_matches, player1 = \"federer\", player2 = \"nadal\", date=\"2008\", tournament = \"wimbledon\")\n",
-    "\n",
-    "test_points = select_players_points(df_points, my_matches)\n",
-    "\n",
-    "test_points.to_csv(\"test_points.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 294 ms\n",
-      "Wall time: 61.8 ms\n",
-      "Wall time: 342 ms\n"
+      "Wall time: 292 ms\n",
+      "Wall time: 65.3 ms\n",
+      "Wall time: 367 ms\n",
+      "Wall time: 455 ms\n"
      ]
     }
    ],
    "source": [
-    "# You can start from here if test data is not changed.\n",
-    "test_points = pd.read_csv(\"test_points.csv\")\n",
+    "# Select one match and get the points\n",
+    "# No need to do this every time. We only need to run this once and save it to a CSV file.\n",
+    "# After that, we just load the CSV file.\n",
+    "my_matches = get_matches(df_matches, player1 = \"federer\", player2 = \"nadal\", date=\"2008\", tournament = \"wimbledon\")\n",
     "\n",
-    "# test_points = clean_point_data(test_points)\n",
+    "test_points = get_points_by_matches(df_points, my_matches)\n",
     "\n",
+    "test_points = clean_point_data(test_points)\n",
+    "\n",
+    "# Test new point data processing functions. Some data processing functions have been run before. \n",
     "%time test_points = identify_server_returner_point_winner(test_points)\n",
     "%time test_points = separate_server_returner_shots(test_points)\n",
     "%time test_points = identify_critical_points(test_points, df_matches)\n",
+    "%time test_points = calculate_score_gaps(test_points, df_matches, \"point_gap_table.csv\")\n",
     "\n",
     "test_points.sort_values(by=[\"match_id\", \"Pt\"], inplace = True)\n",
     "\n",
     "# test_points = test_points[[\"Set1\", \"Set2\", \"Gm1\", \"Gm2\", \"Pts\", \"server_critical_point\", \"returner_critical_point\"]]\n",
     "\n",
-    "test_points.to_csv(\"test_points_serve_outcome.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "point_data_with_gaps = calculate_score_gaps(test_points, df_matches, \"point_gap_table.csv\")\n",
-    "\n",
-    "point_data_with_gaps[[\"Pts\", \"server_points_to_win\", \n",
-    "                      \"returner_points_to_win\", \"server_returner_points_gap\"]].to_csv(\n",
-    "    \"point_gaps.csv\", index=False)"
+    "test_points.to_csv(\"test_points_processed.csv\", index=False)"
    ]
   },
   {
