--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,10 @@
     "        if data.loc[index, \"TB?\"] == 0:\n",
     "            # Identify serve sides based on the score (before serve)\n",
     "            data.at[index, \"serve_side\"] = dict_serve_side[data.loc[index, \"Pts\"]]\n",
-    "        elif data.loc[index, \"TB?\"] == 1:\n",
+    "        elif data.loc[index, \"TB?\"] > 0:\n",
+    "            # If \"TB?\" == 1, it's a regular 7-point tiebreak.\n",
+    "            # If \"TB?\" == 2, it's a 10-point super tiebreak.\n",
+    "            \n",
     "            # For tiebreak points, if the sum of the two scores (before serve) are even, it's on the deuce side.\n",
     "            # If the sum of the two scores (before serve) are odd, it's on the ad side. \n",
     "    #         print(data.loc[index, \"Pts\"])\n",
@@ -769,6 +772,9 @@
     "                data.at[index, \"serve_side\"] = \"deuce\"\n",
     "            elif ((tb_point1 + tb_point2) % 2) == 1:\n",
     "                data.at[index, \"serve_side\"] = \"ad\"\n",
+    "        else:\n",
+    "            print(\"Unable to identify server side.\")\n",
+    "            print(\"TB? == \" + str(data.loc[index, \"TB?\"]))\n",
     "\n",
     "    # data[[\"Pts\", \"TB?\", \"serve_side\"]]\n",
     "    return data"
@@ -1003,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1062,7 @@
     "            if len(rally_end_codes) > 0:\n",
     "                point_data.at[index, \"how_rally_end\"] = rally_end_codes.pop(0)\n",
     "            else:\n",
-    "                print(\"No rally end code: \", end = \"\")\n",
+    "                print(\"Warning: No rally end code: \", end = \"\")\n",
     "                print(row[[\"match_id\", \"Pt\", \"Rally\"]])\n",
     "            \n",
     "            # Use a regular expression to separate each shot from the Rally string.\n",
@@ -1167,8 +1173,13 @@
     "                else:\n",
     "                    column = \"server_shots_code_w_position\"\n",
     "                \n",
-    "                point_data.at[index, column] = (point_data.at[index,column] + my_lateral_position + \"_\" +\n",
-    "                                                my_depth + \"_\" + shots[i] + \",\")                    \n",
+    "                try:\n",
+    "                    point_data.at[index, column] = (point_data.at[index,column] + my_lateral_position + \"_\" +\n",
+    "                                                    my_depth + \"_\" + shots[i] + \",\")                    \n",
+    "                    \n",
+    "                except TypeError:\n",
+    "                    print(\"TypeError: \")\n",
+    "                    print(row[[\"match\"\"Pts\",\"serve_side\"]])\n",
     "                \n",
     "                if shot_direction != None:\n",
     "                    # Save the estimated lateral_position and depth for the opponent in the next shot\n",
@@ -1765,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1949,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1217,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2073,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1217,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2337,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,15 +2377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-243f6c243ac3>, line 46)",
+     "evalue": "invalid syntax (<ipython-input-36-d0c9e79f21e2>, line 53)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-31-243f6c243ac3>\"\u001b[1;36m, line \u001b[1;32m46\u001b[0m\n\u001b[1;33m    def get_stats(point_data, player)\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-36-d0c9e79f21e2>\"\u001b[1;36m, line \u001b[1;32m53\u001b[0m\n\u001b[1;33m    def get_stats(point_data, player)\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -2616,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2630,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2639,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2712,15 +2723,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.99 s\n",
-      "Wall time: 2min 13s\n"
+      "Wall time: 2.21 s\n",
+      "Wall time: 2min 28s\n"
      ]
     }
    ],
@@ -2736,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2745,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2754,14 +2765,10 @@
      "text": [
       "Synchronize match and point data ...\n",
       "Checking if points data and match data are consistent ... \n",
-      "There are 2350 match ids in the match data set.\n",
+      "There are 2573 match ids in the match data set.\n",
       "There are 2573 match ids in the point data set.\n",
-      "The number of match ids do not match. Trying to fix the problem ...\n",
-      "The following match ids are in the match data set but not the point data set. Fix it.\n",
-      "\n",
-      "Match data and point data are the same at 2573\n",
-      "Problem solved\n",
-      "Wall time: 321 ms\n"
+      "No problem found\n",
+      "Wall time: 128 ms\n"
      ]
     }
    ],
@@ -2773,14 +2780,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.1 s\n"
+      "Wall time: 7.06 s\n"
      ]
     }
    ],
@@ -2793,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2803,7 +2810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2811,8 +2818,18 @@
      "output_type": "stream",
      "text": [
       "Identify serve side ...\n",
-      "Wall time: 46.7 s\n"
+      "Wall time: 49.2 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2825,7 +2842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2833,7 +2850,7 @@
      "output_type": "stream",
      "text": [
       "Identify serve direction and outcome ...\n",
-      "Wall time: 2.29 s\n"
+      "Wall time: 2.37 s\n"
      ]
     }
    ],
@@ -2845,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2853,7 +2870,7 @@
      "output_type": "stream",
      "text": [
       "Identify server, returner, and point winner ...\n",
-      "Wall time: 4min 25s\n"
+      "Wall time: 4min 44s\n"
      ]
     }
    ],
@@ -2865,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3061,7 +3078,7 @@
       "Pt                                                       205\n",
       "Rally              f17f3s3b3s2f3b3b2s2f3b2f3b1f2f+3b2z2b3z^3\n",
       "Name: 436257, dtype: object\n",
-      "Wall time: 1min 14s\n"
+      "Wall time: 2min 35s\n"
      ]
     }
    ],
@@ -3073,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3098,7 @@
      "output_type": "stream",
      "text": [
       "Identify critical points ...\n",
-      "Wall time: 5min 37s\n"
+      "Wall time: 5min 33s\n"
      ]
     }
    ],
@@ -3093,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3101,7 +3118,7 @@
      "output_type": "stream",
      "text": [
       "calculate score gaps ...\n",
-      "Wall time: 11min 14s\n"
+      "Wall time: 26min 21s\n"
      ]
     }
    ],
@@ -3113,7 +3130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3121,7 +3138,7 @@
      "output_type": "stream",
      "text": [
       "assign point scores to players ...\n",
-      "Wall time: 45.7 s\n"
+      "Wall time: 49.6 s\n"
      ]
     }
    ],
@@ -3133,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3141,7 +3158,7 @@
      "output_type": "stream",
      "text": [
       "calculate simple point scores ...\n",
-      "Wall time: 51.6 s\n"
+      "Wall time: 59 s\n"
      ]
     }
    ],
@@ -3153,23 +3170,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time df_points = calculate_set_game_index(df_points)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 17 s\n"
+      "Wall time: 1.12 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time df_points = calculate_set_game_index(df_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 16.1 s\n"
      ]
     }
    ],
