--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -2398,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,12 +2432,7 @@
     "# Is there a more sophisticated way to link shots and combinations and win or loss?\n",
     "\n",
     "# Get the following stats for a player\n",
-    "# first serve in %\n",
-    "# first serve won %\n",
-    "# number of aces\n",
-    "# number of unreturnables\n",
-    "# second serve %\n",
-    "# second serve won %\n",
+    "\n",
     "# first serve return point won %\n",
     "# second serve return point won %\n",
     "# first serve wide %\n",
@@ -2478,6 +2473,46 @@
     "\n",
     "# Return a dataframe that contains the statistics for a player\n",
     "def get_stats(point_data):\n",
+    "    stats = pd.DataFrame(data, columns = [\"first_serve_in_%\", \n",
+    "                                          \"first_serve_won_%\",\n",
+    "                                         \"second_serve_in_%\",\n",
+    "                                         \"second_serve_won_%\",\n",
+    "                                         \"ace_count\",\n",
+    "                                          \"unreturnable_serve_count\",\n",
+    "                                          \"first_serve_rally_length_min\",\n",
+    "                                          \"first_serve_rally_length_max\",\n",
+    "                                          \"first_serve_rally_length_mean\",\n",
+    "                                          \"second_serve_rally_length_min\",\n",
+    "                                          \"second_serve_rally_length_max\",\n",
+    "                                          \"second_serve_rally_length_mean\",\n",
+    "                                          \"first_serve_wide_%\",\n",
+    "                                          \"first_serve_wide_won_%\",\n",
+    "                                          \"first_serve_wide_rally_length_mean\",\n",
+    "                                          \"first_serve_body_%\",\n",
+    "                                          \"first_serve_body_won_%\",\n",
+    "                                          \"first_serve_t_%\",\n",
+    "                                          \"first_serve_t_won_%\",\n",
+    "                                          \"second_serve_wide_%\",\n",
+    "                                          \"second_serve_wide_won_%\",\n",
+    "                                          \"second_serve_body_%\",\n",
+    "                                          \"second_serve_body_won_%\",\n",
+    "                                          \"second_serve_t_%\",\n",
+    "                                          \"second_serve_t_won_%\",\n",
+    "                                         \"break_points_count\",\n",
+    "                                          \"break_points_won_%\",\n",
+    "                                         \"game_point_count\",\n",
+    "                                         \"game_points_won_%\",\n",
+    "                                         \"set_point_count\",\n",
+    "                                         \"set_points_won_%\",\n",
+    "                                         \"match_point_count\",\n",
+    "                                         \"match_points_won_%\",\n",
+    "                                         \"setup_point_count\",\n",
+    "                                         \"setup_points_won_%\",\n",
+    "                                          \"forehand_%\",\n",
+    "                                          \"backhand_%\",\n",
+    "                                          \"netpoint_%\"\n",
+    "                                         ])\n",
+    "    \n",
     "    # first serve %\n",
     "    # second serve %\n",
     "    # first serve win % \n",
